--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
 
   continuous-deployment:
     machine: true
-    resource_class: ketangangal/self-hosted
+    resource_class: tanujkumar24/finance-pro
     environment:
       REPOSITORY: finance-complaint
       GAR_IMAGE_NAME: finance-complaint
